# Project-NUEVO

./: .gitignore  LIDAR.md  MKPushTest.txt
Manual_Testing/: test1_4_16.py
docs/: COMMUNICATION_PROTOCOL.md  stall_detection_todo.md
docs/lab_manual/: README.md
docs/lab_manual/Lab1_ROS2/: dc_motor_1_0331_15-28.csv  main.tex  ol-softwaremanual.cls  plot_step_response.m
docs/lab_manual/Lab1_ROS2/_minted-main/: 188A9A30987D414E6142CE76D89273BCD3773C8B440B993359565A23D713B17A.pygtex  2EDC0F9708EEB174BE755D4530A6055BD3773C8B440B993359565A23D713B17A.pygtex  3D02A0DD767FAC9F0E9BA1DDDB857D5DD3773C8B440B993359565A23D713B17A.pygtex  465DAB3B521C42EAC999D8925CA913F87D3289DBDE903A89739C57D3A0B8725F.pygtex  5313562ACE7540CDCCDC0C12C041E2C1D3773C8B440B993359565A23D713B17A.pygtex  548C3633A3159D542A4923C96015F6197D3289DBDE903A89739C57D3A0B8725F.pygtex  58E68DE6657C90EA3406D78A29BDCE23D3773C8B440B993359565A23D713B17A.pygtex  7254542B429CA4D8A9D22AC02BE0C17FD3773C8B440B993359565A23D713B17A.pygtex  7E0A27DAAC38FB6F207B9B472F29A683D3773C8B440B993359565A23D713B17A.pygtex  A449CB4EFB783BFFAB31D59DE7FE09237D3289DBDE903A89739C57D3A0B8725F.pygtex  C2B65543562A7FDC6D9947BF08EF13A9D3773C8B440B993359565A23D713B17A.pygtex  DA6D332916CA2DDD107605E861AD0E87D3773C8B440B993359565A23D713B17A.pygtex  E9F24554D50C150FD8ABD50E9262DA947D3289DBDE903A89739C57D3A0B8725F.pygtex  F8C349C12E86A19ACB363A4FA315D60FD3773C8B440B993359565A23D713B17A.pygtex
docs/lab_manual/Lab3_Sensor_Fusion/: main.tex  presentation.tex
docs/manual/: MANUAL.md
firmware/: README.md
firmware/arduino/: arduino.ino  implementation.md  pin_table.md  technical_notes.md
firmware/arduino/src/: ISRScheduler.cpp  ISRScheduler.h  Scheduler.cpp  Scheduler.h  SystemManager.cpp  SystemManager.h  config.h  pins.h
firmware/arduino/src/drivers/: DCMotor.cpp  DCMotor.h  StepperMotor.h
firmware/arduino/src/messages/: TLV_Payloads.h  TLV_TypeDefs.h
firmware/arduino/src/modules/: MessageCenter.cpp  MessageCenter.h  PersistentStorage.h  RobotKinematics.cpp  RobotKinematics.h  SafetyManager.cpp  SafetyManager.h  SensorManager.cpp  SensorManager.h  StepperManager.cpp  UserIO.cpp  UserIO.h
firmware/notes/: REV_A_TO_REV_B_CHANGES.md  TIMER3_CONFLICT_ANALYSIS.md  technical_notes.md
firmware/tests/: README.md
firmware/tests/test_uart_tlv/: test_uart_tlv.ino
nuevo_ui/backend/: package.xml
nuevo_ui/backend/nuevo_bridge/: TLV_TypeDefs.py  auth.py  config.py  mag_calibration.py  message_router.py  payloads.py  serial_manager.py
nuevo_ui/backend/nuevo_bridge/tests/: test_message_router_compact_tlv.py  test_runtime.py
nuevo_ui/frontend/: package-lock.json
nuevo_ui/frontend/src/components/: ArduinoSystemSection.tsx  PowerSection.tsx  SensorSection.tsx  UserIOSection.tsx
nuevo_ui/frontend/src/lib/: wsProtocol.ts
nuevo_ui/frontend/src/store/: robotStore.ts
ros2_ws/: README.md  TEST.md  TESTING.md
ros2_ws/docker/: Dockerfile.jetson  Dockerfile.robot  docker-compose.jetson.yml  docker-compose.rpi.yml  docker-compose.vm.yml  enter_ros2.sh  entrypoint.jetson.sh  entrypoint.robot.sh
ros2_ws/src/bridge/bridge/: bridge_node.py  ros_conversions.py
ros2_ws/src/bridge_interfaces/: CMakeLists.txt
ros2_ws/src/bridge_interfaces/msg/: SysOdomParamSet.msg  TagDetection.msg  TagDetectionArray.msg
ros2_ws/src/global_gps/: README.md  capture_photo.py  package.xml  setup.cfg
ros2_ws/src/global_gps/global_gps/: geometry_utils.py  ground_localizer_node.py
ros2_ws/src/global_gps/launch/: global_gps.launch.py
ros2_ws/src/robot/: ROBOT_NODE_DESIGN.md  setup.cfg
ros2_ws/src/robot/launch/: lidar_obstacle_test.launch.py  robot.launch.py  robot2.launch.py  test_orientation_fusion.launch.py  test_position_fusion.launch.py  test_zero_kinematics.launch.py
ros2_ws/src/robot/robot/: OBSTACLE_AVOIDANCE_BUGS.md  discovery_test_node.py  main.py  manipulation1.py  move_servos_1.py  path_planner.py  rectangularmotion1.py  robot.py  robot_fsm.py  robot_node.py  sensor_fusion.py  test_orientation_fusion.py  test_position_fusion.py  test_zero_kinematics.py
ros2_ws/src/robot/robot/examples/: button_fsm.py  led_duty_cycle_demo.py  lidar_obstacle_test.py  obstacle_avoidance.py  obstacle_avoidance2.py  obstacle_avoidance_dwa.py  odom_param_demo.py  pure_pursuit_with_avoidance.py  square_drive.py
ros2_ws/src/robot/test/: test_orientation_sensor_fusion.py  test_position_fusion.py  test_position_fusion_runtime.py  test_robot_api.py
ros2_ws/src/rplidar_ros/scripts/: create_udev_rules.sh
ros2_ws/src/rplidar_ros/src/: rplidar_node.cpp
ros2_ws/src/sensors/: setup.cfg
ros2_ws/src/sensors/sensors/: robot_gps_node.py  sensor_node.py
tlv_protocol/: TLV_Payloads.md  TLV_TypeDefs.json
