[metadata]
name = global_gps
version = 0.1.0
description = Field-level ArUco localizer for the Jetson Nano
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
include = global_gps*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/global_gps
share/global_gps =
    package.xml
share/global_gps/launch =
    launch/global_gps.launch.py

[options.entry_points]
console_scripts =
    ground_localizer = global_gps.ground_localizer_node:main

[develop]
script_dir = $base/lib/global_gps
[install]
install_scripts = $base/lib/global_gps
