[metadata]
name = robot
version = 0.1.0
description = Main ROS2 package for robot behavior, bringup, and assets
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
include = robot*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/robot
share/robot =
    package.xml
share/robot/launch =
    launch/robot.launch.py
    launch/test_orientation_fusion.launch.py
    launch/test_position_fusion.launch.py
    launch/test_zero_kinematics.launch.py

[options.entry_points]
console_scripts =
    robot = robot.robot_node:main
    test_orientation_fusion = robot.test_orientation_fusion:main
    test_position_fusion = robot.test_position_fusion:main
    test_zero_kinematics = robot.test_zero_kinematics:main

[develop]
script_dir = $base/lib/robot
[install]
install_scripts = $base/lib/robot
