[metadata]
name = sensors
version = 0.1.0
description = ROS2 package for Raspberry Pi connected sensor nodes
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
include = sensors*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/sensors
share/sensors =
    package.xml

[options.entry_points]
console_scripts =
    sensor_node = sensors.sensor_node:main
    robot_gps = sensors.robot_gps_node:main

[develop]
script_dir = $base/lib/sensors
[install]
install_scripts = $base/lib/sensors
